2013-02-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-delete-record-internal)
	(bbdb-insert-record-internal, bbdb-overwrite-record-internal): Use
	inhibit-quit.

2013-02-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-changed-records, bbdb-hashtable): Doc fix.

2013-02-15  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-modified): Removed.
	(bbdb-buffer, bbdb-after-save, bbdb-delete-record-internal)
	(bbdb-insert-record-internal, bbdb-overwrite-record-internal)
	(bbdb-sort-records): Do not set bbdb-modified.
	(bbdb-mode): Use buffer-modified-p.

2013-02-02  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mail-user-agent): Use non-nil default taken
	from mail-user-agent.
	(bbdb-lastname-re, bbdb-lastname-suffix-re): New user variables.
	(bbdb-divide-name): Use them.  Pass first and last name through
	bbdb-string-trim.

	* lisp/bbdb-mua.el (bbdb-canonicalize-mail): Always pass mail
	through bbdb-string-trim.
	(bbdb-canonicalize-mail-1): Always pass mail through
	bbdb-string-trim.
	(bbdb-canonical-hosts): Use regxp-opt instead of regexp-quote.
	(bbdb-message-clean-name-default): Re-arrange clean-up steps.  Use
	substring-no-properties.

2013-01-20  Roland Winkler  <winkler@gnu.org>
	* aclocal.m4: Do not throw an error if tex_dir does not exist.

2013-01-20  Roland Winkler  <winkler@gnu.org>
	* doc/Makefile.in, tex/Makefile.in: Provide the DESTDIR variable.
	(Bug#38124)

2013-01-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-parse-records): Set bbdb-xfield-labels-list
	and bbdb-organization-list to nil only once.

2013-01-13  Roland Winkler  <winkler@gnu.org>
	Update copyright year in all files.

2013-01-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-organization-list): New variable.
	(bbdb-record-set-field): Use it.  Update bbdb-phone-label-list,
	bbdb-address-label-list, and bbdb-xfield-label-list.
	((bbdb-set-xfield-labels): Removed
	(bbdb-record-set-xfield): Set bbdb-xfield-labels-list explicitly.